# SNPraefentia

./: .gitignore  LICENSE  NOTICE  README.md  README.txt  SNAP.ipynb  pyproject.toml  requirements.txt  setup.py
data/: input_data.csv  input_data.xlsx  real_cd_input.xlsx
input/: input.xlsx
snap/: __init__.py  cli.py  config.py  core.py  scoring.py
snap/db/: __init__.py
snap/io/: __init__.py  loader.py  writer.py
snap/processors/: __init__.py  amino_acid.py  depth.py  taxonomy.py  uniprot.py
snap/tests/: __init__.py  test_core.py  test_processors.py  test_scoring.py
snpraefentia/: __init__.py  cli.py  config.py  core.py  plotting.py  scoring.py
snpraefentia/db/: __init__.py  aa_properties.py
snpraefentia/io/: __init__.py  loader.py  writer.py
snpraefentia/processors/: __init__.py  amino_acid.py  depth.py  taxonomy.py  uniprot.py
snpraefentia/tests/: __init__.py  test_core.py  test_processors.py  test_scoring.py
